--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,16 +52,19 @@ android {
 }
 
 dependencies {
+    implementation project(":data")
 
-    implementation 'androidx.core:core-ktx:1.9.0'
     implementation "androidx.activity:activity-ktx:1.6.1"
     implementation 'androidx.appcompat:appcompat:1.5.1'
+
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-common-java8:2.5.1'
+
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
@@ -71,12 +74,6 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
-
-    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.google.code.gson:gson:2.10'
-
-    implementation 'com.jakewharton.timber:timber:5.0.1'
 
     implementation 'androidx.paging:paging-runtime:3.1.1'
 
