--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 
     api 'com.google.code.gson:gson:2.10'
 
+    api 'androidx.paging:paging-runtime:3.1.1'
+
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
 }
