--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,8 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
 
+    implementation "com.airbnb.android:lottie:3.4.0"
+
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
