--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -43,6 +43,10 @@ dependencies {
 
     api 'androidx.paging:paging-runtime:3.1.1'
 
+    api "androidx.room:room-runtime:2.4.2"
+    api "androidx.room:room-ktx:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
+
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
 }
