--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,20 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('C:\\Users\\kaacp\\AndroidStudioProjects\\NewsApp\\gradle\\release-keystore.jks')
+            storePassword 'QWERTY123!@#'
+            keyAlias 'upload'
+            keyPassword 'QWERTY123!@#'
+        }
+        release {
+            storePassword 'QWERTY123!@#'
+            keyPassword 'QWERTY123!@#'
+            keyAlias 'upload'
+            storeFile file('C:\\Users\\kaacp\\AndroidStudioProjects\\NewsApp\\gradle\\release-keystore.jks')
+        }
+    }
     namespace 'com.krolikowski.newsapp'
     compileSdk 33
 
@@ -18,6 +32,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.release
     }
 
     buildTypes {
@@ -27,11 +42,14 @@ android {
             shrinkResources false
             applicationIdSuffix = ".debug"
             versionNameSuffix = "-DEV"
+            signingConfig signingConfigs.release
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         release {
             debuggable false
-            minifyEnabled true
+            minifyEnabled false
             shrinkResources false
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
