NEWS-17 feat: Final

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
+#this files is added to github only for private usage
 sdk.dir=D\:\\SDK
 API_KEY=14e1622c28f948fe86a6cbd24243ecc0
